--- a/bootkernel/kernel/RaspberryPi5.config
+++ b/bootkernel/kernel/RaspberryPi5.config
@@ -1204,7 +1204,7 @@ CONFIG_GENERIC_CPU_VULNERABILITIES=y
 CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
-CONFIG_REGMAP_SPI=m
+CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_MMIO=y
 CONFIG_REGMAP_IRQ=y
 CONFIG_DMA_SHARED_BUFFER=y
@@ -3733,19 +3733,19 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_SM5502 is not set
 # CONFIG_EXTCON_USB_GPIO is not set
 # CONFIG_MEMORY is not set
-CONFIG_IIO=m
+CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
-CONFIG_IIO_BUFFER_CB=m
+# CONFIG_IIO_BUFFER_CB is not set
 # CONFIG_IIO_BUFFER_DMA is not set
 # CONFIG_IIO_BUFFER_DMAENGINE is not set
 # CONFIG_IIO_BUFFER_HW_CONSUMER is not set
-CONFIG_IIO_KFIFO_BUF=m
-CONFIG_IIO_TRIGGERED_BUFFER=m
-CONFIG_IIO_CONFIGFS=m
+CONFIG_IIO_KFIFO_BUF=y
+CONFIG_IIO_TRIGGERED_BUFFER=y
+CONFIG_IIO_CONFIGFS=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_IIO_SW_DEVICE is not set
-CONFIG_IIO_SW_TRIGGER=m
+# CONFIG_IIO_SW_TRIGGER is not set
 # CONFIG_IIO_TRIGGERED_EVENT is not set
 
 #
@@ -3834,21 +3834,21 @@ CONFIG_IIO_SW_TRIGGER=m
 # CONFIG_MAX1241 is not set
 # CONFIG_MAX1363 is not set
 # CONFIG_MAX9611 is not set
-CONFIG_MCP320X=m
-CONFIG_MCP3422=m
-# CONFIG_MCP3911 is not set
-# CONFIG_NAU7802 is not set
+CONFIG_MCP320X=y
+CONFIG_MCP3422=y
+CONFIG_MCP3911=y
+CONFIG_NAU7802=y
 # CONFIG_RICHTEK_RTQ6056 is not set
 # CONFIG_SD_ADC_MODULATOR is not set
 # CONFIG_STMPE_ADC is not set
-# CONFIG_TI_ADC081C is not set
+CONFIG_TI_ADC081C=y
 # CONFIG_TI_ADC0832 is not set
 # CONFIG_TI_ADC084S021 is not set
 # CONFIG_TI_ADC12138 is not set
 # CONFIG_TI_ADC108S102 is not set
 # CONFIG_TI_ADC128S052 is not set
 # CONFIG_TI_ADC161S626 is not set
-CONFIG_TI_ADS1015=m
+CONFIG_TI_ADS1015=y
 # CONFIG_TI_ADS7950 is not set
 # CONFIG_TI_ADS8344 is not set
 # CONFIG_TI_ADS8688 is not set
@@ -3892,17 +3892,14 @@ CONFIG_TI_ADS1015=m
 #
 # CONFIG_ATLAS_PH_SENSOR is not set
 # CONFIG_ATLAS_EZO_SENSOR is not set
-CONFIG_BME680=m
-CONFIG_BME680_I2C=m
-CONFIG_BME680_SPI=m
-CONFIG_CCS811=m
+# CONFIG_BME680 is not set
+# CONFIG_CCS811 is not set
 # CONFIG_IAQCORE is not set
 # CONFIG_SCD30_CORE is not set
 # CONFIG_SCD4X is not set
-CONFIG_SENSIRION_SGP30=m
+# CONFIG_SENSIRION_SGP30 is not set
 # CONFIG_SENSIRION_SGP40 is not set
-CONFIG_SPS30=m
-CONFIG_SPS30_I2C=m
+# CONFIG_SPS30_I2C is not set
 # CONFIG_SENSEAIR_SUNRISE_CO2 is not set
 # CONFIG_VZ89X is not set
 # end of Chemical Sensors
@@ -3912,7 +3909,7 @@ CONFIG_SPS30_I2C=m
 #
 # end of Hid Sensor IIO Common
 
-CONFIG_IIO_MS_SENSORS_I2C=m
+CONFIG_IIO_MS_SENSORS_I2C=y
 
 #
 # IIO SCMI Sensors
@@ -3935,8 +3932,9 @@ CONFIG_IIO_MS_SENSORS_I2C=m
 # CONFIG_AD5421 is not set
 # CONFIG_AD5446 is not set
 # CONFIG_AD5449 is not set
+CONFIG_AD5592R_BASE=y
 # CONFIG_AD5592R is not set
-# CONFIG_AD5593R is not set
+CONFIG_AD5593R=y
 # CONFIG_AD5504 is not set
 # CONFIG_AD5624R_SPI is not set
 # CONFIG_LTC2688 is not set
@@ -4027,7 +4025,7 @@ CONFIG_IIO_MS_SENSORS_I2C=m
 # CONFIG_AFE4403 is not set
 # CONFIG_AFE4404 is not set
 # CONFIG_MAX30100 is not set
-CONFIG_MAX30102=m
+# CONFIG_MAX30102 is not set
 # end of Heart Rate Monitors
 # end of Health Sensors
 
@@ -4035,13 +4033,15 @@ CONFIG_MAX30102=m
 # Humidity sensors
 #
 # CONFIG_AM2315 is not set
-CONFIG_DHT11=m
-CONFIG_HDC100X=m
+# CONFIG_DHT11 is not set
+# CONFIG_HDC100X is not set
 # CONFIG_HDC2010 is not set
-# CONFIG_HTS221 is not set
-CONFIG_HTU21=m
+CONFIG_HTS221=y
+CONFIG_HTS221_I2C=y
+CONFIG_HTS221_SPI=y
+CONFIG_HTU21=y
 # CONFIG_SI7005 is not set
-CONFIG_SI7020=m
+# CONFIG_SI7020 is not set
 # end of Humidity sensors
 
 #
@@ -4053,15 +4053,13 @@ CONFIG_SI7020=m
 # CONFIG_ADIS16480 is not set
 # CONFIG_BMI160_I2C is not set
 # CONFIG_BMI160_SPI is not set
-CONFIG_BOSCH_BNO055=m
-CONFIG_BOSCH_BNO055_I2C=m
+# CONFIG_BOSCH_BNO055_I2C is not set
 # CONFIG_FXOS8700_I2C is not set
 # CONFIG_FXOS8700_SPI is not set
 # CONFIG_KMX61 is not set
 # CONFIG_INV_ICM42600_I2C is not set
 # CONFIG_INV_ICM42600_SPI is not set
-CONFIG_INV_MPU6050_IIO=m
-CONFIG_INV_MPU6050_I2C=m
+# CONFIG_INV_MPU6050_I2C is not set
 # CONFIG_INV_MPU6050_SPI is not set
 # CONFIG_IIO_ST_LSM6DSX is not set
 # CONFIG_IIO_ST_LSM9DS0 is not set
@@ -4075,9 +4073,9 @@ CONFIG_INV_MPU6050_I2C=m
 # CONFIG_AL3010 is not set
 # CONFIG_AL3320A is not set
 # CONFIG_APDS9300 is not set
-CONFIG_APDS9960=m
+# CONFIG_APDS9960 is not set
 # CONFIG_AS73211 is not set
-CONFIG_BH1750=m
+# CONFIG_BH1750 is not set
 # CONFIG_BH1780 is not set
 # CONFIG_CM32181 is not set
 # CONFIG_CM3232 is not set
@@ -4104,17 +4102,17 @@ CONFIG_BH1750=m
 # CONFIG_STK3310 is not set
 # CONFIG_ST_UVIS25 is not set
 # CONFIG_TCS3414 is not set
-# CONFIG_TCS3472 is not set
+CONFIG_TCS3472=y
 # CONFIG_SENSORS_TSL2563 is not set
 # CONFIG_TSL2583 is not set
 # CONFIG_TSL2591 is not set
 # CONFIG_TSL2772 is not set
-CONFIG_TSL4531=m
+# CONFIG_TSL4531 is not set
 # CONFIG_US5182D is not set
 # CONFIG_VCNL4000 is not set
 # CONFIG_VCNL4035 is not set
 # CONFIG_VEML6030 is not set
-CONFIG_VEML6070=m
+# CONFIG_VEML6070 is not set
 # CONFIG_VL6180 is not set
 # CONFIG_ZOPT2201 is not set
 # end of Light sensors
@@ -4151,10 +4149,8 @@ CONFIG_VEML6070=m
 #
 # Triggers - standalone
 #
-CONFIG_IIO_HRTIMER_TRIGGER=m
-CONFIG_IIO_INTERRUPT_TRIGGER=m
-# CONFIG_IIO_TIGHTLOOP_TRIGGER is not set
-CONFIG_IIO_SYSFS_TRIGGER=m
+# CONFIG_IIO_INTERRUPT_TRIGGER is not set
+# CONFIG_IIO_SYSFS_TRIGGER is not set
 # end of Triggers - standalone
 
 #
@@ -4188,18 +4184,18 @@ CONFIG_IIO_SYSFS_TRIGGER=m
 # Pressure sensors
 #
 # CONFIG_ABP060MG is not set
-CONFIG_BMP280=m
-CONFIG_BMP280_I2C=m
-CONFIG_BMP280_SPI=m
+CONFIG_BMP280=y
+CONFIG_BMP280_I2C=y
+CONFIG_BMP280_SPI=y
 # CONFIG_DLHL60D is not set
 # CONFIG_DPS310 is not set
 # CONFIG_HP03 is not set
 # CONFIG_ICP10100 is not set
 # CONFIG_MPL115_I2C is not set
 # CONFIG_MPL115_SPI is not set
-# CONFIG_MPL3115 is not set
+CONFIG_MPL3115=y
 # CONFIG_MS5611 is not set
-CONFIG_MS5637=m
+# CONFIG_MS5637 is not set
 # CONFIG_IIO_ST_PRESS is not set
 # CONFIG_T5403 is not set
 # CONFIG_HP206C is not set
@@ -4241,7 +4237,7 @@ CONFIG_MS5637=m
 # Temperature sensors
 #
 # CONFIG_LTC2983 is not set
-CONFIG_MAXIM_THERMOCOUPLE=m
+# CONFIG_MAXIM_THERMOCOUPLE is not set
 # CONFIG_MLX90614 is not set
 # CONFIG_MLX90632 is not set
 # CONFIG_TMP006 is not set
@@ -4249,7 +4245,7 @@ CONFIG_MAXIM_THERMOCOUPLE=m
 # CONFIG_TMP117 is not set
 # CONFIG_TSYS01 is not set
 # CONFIG_TSYS02D is not set
-CONFIG_MAX31856=m
+# CONFIG_MAX31856 is not set
 # CONFIG_MAX31865 is not set
 # end of Temperature sensors
 
